fix menu on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1100,7 +1100,6 @@
     content: "";
     height: 100%;
     background: red;
-    z-index: 0;
     top: 0;
     left: 0;
     -webkit-transition: all 0.7s cubic-bezier(0.25, 0.8, 0.25, 1) 0s !important;
